--- a/src/Orbital.Web/Views/Shared/_Layout.cshtml
+++ b/src/Orbital.Web/Views/Shared/_Layout.cshtml
@@ -4,12 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="~/" />
 
     <title>Orbital - @(ViewData["Title"] ?? "Page")</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    
+
+    <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    <environment exclude="Development">
+        <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />
+    </environment>
+
     <link rel="stylesheet" href="~/static/app.css" />
 </head>
 <body>
@@ -18,7 +24,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">Orbital</a>
-        
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -34,8 +40,22 @@
         @RenderBody()
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.js" integrity="sha384-4iOd7lL+ERkrKNszIV8OvL/Kx7SfTMqWi6s2E41ee9VRt+zI32yyElYpGcnZB7R3" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+    <script>
+    function es6Require(deps, callback, errback) {
+        return require(deps, function () {
+            for (let i = 0; i < arguments.length; ++i) {
+                arguments[i] = arguments[i].__esModule && arguments[i].default ? arguments[i].default : arguments[i];
+            }
+            callback.apply(this, arguments);
+        }, errback);
+    }
+    </script>
+
+    <script src="~/dist/vendor.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
