--- a/src/Orbital.Web/Views/_ViewImports.cshtml
+++ b/src/Orbital.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Orbital.Web
 @using Orbital.Models.Domain
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Microsoft.AspNetCore.SpaServices
