--- a/src/Orbital.Web/Views/Round/Index.cshtml
+++ b/src/Orbital.Web/Views/Round/Index.cshtml
@@ -9,7 +9,7 @@
     <h2 class="mr-auto p-2">Rounds</h2>
     <div class="p-2">
         <div class="btn-group" role="group">
-            <a class="btn btn-default" href="@Url.Action(nameof(RoundController.Create))" rol="button">
+            <a class="btn btn-default" href="@Url.Action(nameof(RoundController.Create))" role="button">
                 <i class="fa fa-plus" aria-hidden="true"></i>
                 <div class="sr-only">Create</div>
             </a>
