--- a/src/Orbital.Web/Views/Round/Index.cshtml
+++ b/src/Orbital.Web/Views/Round/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using Orbital.Web.Rounds
-@model IReadOnlyCollection<Round>
+﻿@using Orbital.Models
+@using Orbital.Web.Rounds
+@model IReadOnlyCollection<Orbital.Models.Round>
 
 @{
     ViewBag.Title = "Clubs";
