--- a/src/Orbital.Web/Views/_ViewImports.cshtml
+++ b/src/Orbital.Web/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Orbital.Models.Domain
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.SpaServices
+@addTagHelper *, Orbital.Web
