--- a/src/Orbital.Web/Views/Club/Index.cshtml
+++ b/src/Orbital.Web/Views/Club/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="d-flex justify-content-end">
-    <h2 class="mr-auto p-2">Clubs</h2>
+    <h2 class="mr-auto p-2">@ViewBag.Title</h2>
     <div class="p-2">
         <div class="btn-group" role="group">
             <a class="btn btn-default" href="@Url.Action(nameof(ClubController.Create))" rol="button">
