Moved models to correct namespace

--- a/src/Orbital.Web/Views/_ViewImports.cshtml
+++ b/src/Orbital.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Orbital.Web
-@using Orbital.Models.Domain
+@using Orbital.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.SpaServices
 @addTagHelper *, Orbital.Web
