--- a/src/Orbital.Web/Views/Shared/_Layout.cshtml
+++ b/src/Orbital.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Round" asp-action="Index">Rounds</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="People" asp-action="Index">People</a>
+                </li>
             </ul>
         </div>
     </nav>
