--- a/src/Orbital.Web/Views/Shared/_Layout.cshtml
+++ b/src/Orbital.Web/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="People" asp-action="Index">People</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Score" asp-action="Index">Scores</a>
+                </li>
             </ul>
         </div>
     </nav>
